--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Disneyland in the Dark</h1>
-    <div class="background"></div>
+    <div class="background">
     <img id= "fairy" src= "fairy.png" alt = "fairy"></img>
     <img id= "fairy1" src= "fairy1.png" alt = "fairy"></img>
 </body>
